se finaliza entrega

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -86,8 +86,10 @@ hr {
 }
 
 .navbarUnderCategorias li  {
-  color: rgb(253, 248, 238);
   cursor: pointer;
+}
+.navbarUnderCategorias a {
+  color: #c0b9b9;
 }
 
 
