--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -10,13 +10,17 @@
 .compra button {
     cursor: pointer;
     border-radius: 10px;
-    padding: 10px;
+    padding-inline: 10px;
     border: none;
     font-size: 15px;
-}
-.compra a {
-    color: black;
-}
+  }
+  
+  .finalizarBtn  button{
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  
+
 .compra {
     display: flex;
     justify-content: center;
